deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iam-production
spec:
  selector:
    matchLabels:
      app: iam
      env: production
  replicas: 1
  template:
    metadata:
      labels:
        app: iam
        env: production
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/iam:master
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: rsa
          mountPath: "/app/keys"
          readOnly: true
        - name: prometheus-client
          mountPath: /prometheus-client
        command: ["gunicorn", "-c", "gunicorn.py", "iam.wsgi:app"]
        readinessProbe:
          httpGet:
            path: /iam/healthz
            port: 8000
          initialDelaySeconds: 5
        resources:
          requests:
            cpu: "10m"
            memory: "256Mi"
          limits:
            cpu: "500m"
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy", "-instances=dd-decaf-cfbf6:europe-west1:dd-decaf=tcp:5432", "-credential_file=/secrets/cloudsql/credentials.json"]
        volumeMounts:
          - name: cloudsql-instance-credentials
            mountPath: /secrets/cloudsql
            readOnly: true
        resources:
          requests:
            cpu: "10m"
          limits:
            cpu: "100m"
      volumes:
      - name: rsa
        secret:
          secretName: iam-rsa-production
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials
      - name: prometheus-client
        emptyDir: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: iam-staging
spec:
  selector:
    matchLabels:
      app: iam
      env: staging
  replicas: 1
  template:
    metadata:
      labels:
        app: iam
        env: staging
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/iam:devel
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: rsa
          mountPath: "/app/keys"
          readOnly: true
        - name: prometheus-client
          mountPath: /prometheus-client
        command: ["gunicorn", "-c", "gunicorn.py", "iam.wsgi:app"]
        readinessProbe:
          httpGet:
            path: /iam/healthz
            port: 8000
          initialDelaySeconds: 5
        resources:
          requests:
            cpu: "5m"
          limits:
            cpu: "100m"
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy", "-instances=dd-decaf-cfbf6:europe-west1:dd-decaf=tcp:5432", "-credential_file=/secrets/cloudsql/credentials.json"]
        resources:
          requests:
            cpu: "5m"
          limits:
            cpu: "100m"
        volumeMounts:
          - name: cloudsql-instance-credentials
            mountPath: /secrets/cloudsql
            readOnly: true
      volumes:
      - name: rsa
        secret:
          secretName: iam-rsa-staging
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials
      - name: prometheus-client
        emptyDir: {}
